fixed bug on mobile device

--- a/src/container/Pages/CarGallery/CarGallery.scss
+++ b/src/container/Pages/CarGallery/CarGallery.scss
@@ -128,7 +128,9 @@
         bottom: 85px;
         left: 315px;
 
-        color: rgb(0, 0, 0);
+        width: fit-content;
+
+        color: rgb(255, 255, 255);
         font-weight: 600;
       }
 
